--- a/RedaTech/src/main/webapp/WEB-INF/web.xml
+++ b/RedaTech/src/main/webapp/WEB-INF/web.xml
@@ -53,7 +53,7 @@
 		</web-resource-collection>
 		<auth-constraint>
 			<description />
-			<role-name>ALUNO</role-name>
+			<role-name>PROFESSOR</role-name>
 		</auth-constraint>
 		<user-data-constraint>
 			<transport-guarantee>NONE</transport-guarantee>
