--- a/RedaTech/src/main/webapp/WEB-INF/web.xml
+++ b/RedaTech/src/main/webapp/WEB-INF/web.xml
@@ -27,8 +27,8 @@
 		<auth-method>FORM</auth-method>
 		<realm-name>redatechJdbcRealm</realm-name>
 		<form-login-config>
-			<form-login-page>/logar.xhtml</form-login-page>
-			<form-error-page>/logar.xhtml?error=true</form-error-page>
+			<form-login-page>/login.xhtml</form-login-page>
+			<form-error-page>/login.xhtml?error=true</form-error-page>
 		</form-login-config>
 	</login-config>
 	<security-constraint>
